blocks/v2-truck-lineup/v2-truck-lineup.css
:root {
  --truck-lineup-img-width: 60%;
}

@keyframes truck-entry {
  0% {
    transform: translateX(100%);
    opacity: 0;
  }

  25% {
    opacity: 1;
  }

  100% {
    transform: translateX(0);
  }
}

/* Full width block */
main .section.v2-truck-lineup-container .v2-truck-lineup-wrapper {
  margin: 0;
  padding: 0;
  width: 100%;
}

/* End Full width block */

.v2-truck-lineup {
  display: flex;
  flex-direction: column;
}

.v2-truck-lineup__images-container,
.v2-truck-lineup__description-container {
  display: flex;
  flex-flow: row nowrap;
  margin: 0;
  padding-left: 0;
}

.v2-truck-lineup__description-container {
  order: 2;
  overflow: hidden;
}

.v2-truck-lineup__images-container {
  align-items: flex-end;
  overflow: scroll hidden;
  scroll-behavior: smooth;
  scroll-snap-type: x mandatory;
  scrollbar-width: none;
}

.v2-truck-lineup__images-container::-webkit-scrollbar {
  display: none;
}

.v2-truck-lineup__image-item {
  flex: none;
  max-width: var(--truck-lineup-img-width);
  scroll-snap-align: center;
  text-align: center;
}

.v2-truck-lineup__image-item picture {
  display: block;
  animation-duration: 1s;
  animation-delay: 0.5s;
  animation-name: truck-entry;
  animation-timing-function: ease-in;
}

.v2-truck-lineup__image-item:first-child {
  margin-left: 50vw;
}

.v2-truck-lineup__images-container::after {
  content: '';
  display: block;
  flex: 0 0 50vw;
}

.v2-truck-lineup__image-item img {
  aspect-ratio: 3/4;
  max-height: 80vh;
  width: auto;
}

.v2-truck-lineup__content {
  margin: 0 auto 32px;
  text-align: center;
  width: 90%;
}

.v2-truck-lineup__desc-item {
  color: var(--text-color);
  flex: none;
  opacity: 0;
  width: 100%;

  /* fadeout */
  transition: opacity 0.3s cubic-bezier(0, 0, 0, 1);
}

.v2-truck-lineup__desc-item.active {
  opacity: 1;
  transition: opacity 0.5s cubic-bezier(0, 0, 0, 1) 0.5s;
}

.v2-truck-lineup__text {
  margin: 0 auto;
  max-width: 400px;
  text-wrap: balance;
}

.v2-truck-lineup__title {
  margin-right: 5px;
}

.v2-truck-lineup__title,
p.v2-truck-lineup__description {
  color: var(--c-grey-800);
  display: inline;
  font-size: var(--f-heading-5-font-size);
  line-height: var(--f-heading-5-line-height);
}

.v2-truck-lineup__buttons-container {
  margin-top: 32px;
}

.v2-truck-lineup__buttons-container .button-container {
  margin: 10px 0;
}

/* Navigation */
.v2-truck-lineup__navigation::-webkit-scrollbar {
  display: none;
}

ul.v2-truck-lineup__navigation {
  display: flex;
  flex-flow: row nowrap;
  list-style: none;
  margin: 32px 0;
  order: 1;
  overflow: auto;
  padding: 2px 32px;
  position: relative;
}

.v2-truck-lineup__navigation-line {
  background: var(--c-main-black);
  bottom: 0;
  height: 2px;
  left: 0;
  margin: 0;
  position: absolute;
  transition: all 0.3s;
  width: 0;
}

.v2-truck-lineup__navigation::before,
.v2-truck-lineup__navigation::after {
  content: '';
  margin: auto;
}

.v2-truck-lineup__navigation-item {
  margin: 0 16px;
}

.v2-truck-lineup__navigation button {
  background: 0 0;
  border: none;
  color: var(--c-grey-4);
  font-size: var(--f-button-font-size);
  letter-spacing: var(--f-button-letter-spacing);
  line-height: 100%;
  margin: 0;
  padding: 12px 0;
  text-transform: uppercase;
}

.v2-tabbed-carousel__navigation-item.active button {
  color: var(--c-main-black);
}

/* Arrow controls */
.v2-truck-lineup__slider-wrapper {
  position: relative;
}

.v2-truck-lineup__arrow-controls {
  display: none;
  margin: 0;
  opacity: 0;
  transition: opacity var(--duration-small) var(--easing-standard);
}

.v2-truck-lineup__slider-wrapper:hover .v2-truck-lineup__arrow-controls {
  opacity: 1;
}

.v2-truck-lineup__arrow-controls li {
  align-items: center;
  display: flex;
  height: 100%;
  left: 10%;
  position: absolute;
  top: 0;
}

.v2-truck-lineup__arrow-controls li:last-child {
  left: auto;
  right: 10%;
}

/* stylelint-disable-next-line no-descending-specificity */
.v2-truck-lineup__arrow-controls button {
  background-color: var(--c-white);
  border-radius: 50%;
  border: 1px solid var(--c-grey-400);
  color: var(--c-main-black);
  font-size: 0;
  line-height: 0;
  margin: 0;
  padding: 10px;
  position: relative;
}

.v2-truck-lineup__arrow-controls button:hover,
.v2-truck-lineup__arrow-controls button:active {
  border-color: var(--c-white);
}

.v2-truck-lineup__arrow-controls button:hover {
  background-color: var(--c-grey-50);
}

.v2-truck-lineup__arrow-controls button:active {
  background-color: var(--c-grey-100);
}

.v2-truck-lineup__arrow-controls button:focus {
  outline: 2px solid var(--light-border-focus);
}

@media screen and (min-width: 744px) {
  .v2-truck-lineup__arrow-controls {
    display: block;
  }

  .v2-truck-lineup__buttons-container {
    display: flex;
    justify-content: center;
  }

  .v2-truck-lineup__buttons-container .button-container {
    margin-left: 16px;
  }
}

@media screen and (min-width: 1200px) {
  :root {
    --truck-lineup-img-width: 60%;
  }

  .v2-truck-lineup__image-item img {
    aspect-ratio: 16 / 9;
  }

  .v2-truck-lineup__content {
    max-width: 1000px;
  }

  .v2-truck-lineup__content .default-content-wrapper {
    align-items: flex-start;
    display: flex;
    justify-content: space-between;
  }

  .v2-truck-lineup__text {
    flex-basis: 60%;
    margin: 0;
    text-align: left;
  }

  .v2-truck-lineup__buttons-container {
    flex-direction: row;
    margin-top: 0;
  }
}

